Updated website (automated commit)

--- a/download.html
+++ b/download.html
@@ -40,6 +40,7 @@
 <a href="#">Download</a> · 
 <a href="documentation.html">Documentation</a> · 
 <a href="news.html">News</a> · 
+<a href="trainings.html">Trainings</a> · 
 <a href="http://hyperspy.org/hyperspy-doc/dev/citing.html">Citing us</a>
         </div>
        </div>
