--- a/documentation.html
+++ b/documentation.html
@@ -40,6 +40,7 @@
 <a href="download.html">Download</a> · 
 <a href="#">Documentation</a> · 
 <a href="news.html">News</a> · 
+<a href="trainings.html">Trainings</a> · 
 <a href="http://hyperspy.org/hyperspy-doc/dev/citing.html">Citing us</a>
         </div>
        </div>
