--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ please acknowledge this fact by citing the project. Please, read on
     <div class="footer-wrapper">
       
     <div class="footer">
-        &copy; Copyright The Hyperespy development team.
+        &copy; Copyright The Hyperspy development team.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.0.7.
     </div>
     </div>
