--- a/trainings.html
+++ b/trainings.html
@@ -126,7 +126,7 @@
     <div class="footer-wrapper">
       
     <div class="footer">
-        &copy; Copyright The Hyperespy development team.
+        &copy; Copyright The Hyperspy development team.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.0.7.
     </div>
     </div>
