Updated website (automated commit)

--- a/news.html
+++ b/news.html
@@ -38,7 +38,7 @@
 <a href="documentation.html">Documentation</a> · 
 <a href="#">News</a> · 
 <a href="trainings.html">Trainings</a> · 
-<a href="http://hyperspy.org/hyperspy-doc/dev/citing.html">Citing us</a>
+<a href="http://hyperspy.org/hyperspy-doc/dev/citing.html">Citings</a>
         </div>
        </div>
     </div>
