--- a/trainings.html
+++ b/trainings.html
@@ -38,7 +38,7 @@
 <a href="documentation.html">Documentation</a> · 
 <a href="news.html">News</a> · 
 <a href="#">Trainings</a> · 
-<a href="http://hyperspy.org/hyperspy-doc/dev/citing.html">Citing us</a>
+<a href="http://hyperspy.org/hyperspy-doc/dev/citing.html">Citings</a>
         </div>
        </div>
     </div>
