--- a/trainings.html
+++ b/trainings.html
@@ -38,7 +38,7 @@
 <a href="documentation.html">Documentation</a> · 
 <a href="news.html">News</a> · 
 <a href="#">Trainings</a> · 
-<a href="http://hyperspy.org/hyperspy-doc/dev/citing.html">Citing</a>
+<a href="http://hyperspy.org/hyperspy-doc/dev/citing.html">Citing us</a>
         </div>
        </div>
     </div>
@@ -127,7 +127,7 @@
       
     <div class="footer">
         &copy; Copyright The Hyperspy development team.
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.0.7.
+      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.0.1.
     </div>
     </div>
 
