Updated website (automated commit)

--- a/search.html
+++ b/search.html
@@ -57,9 +57,11 @@
           <a href="index.html">Home</a> · 
 <a href="download.html">Download</a> · 
 <a href="documentation.html">Documentation</a> · 
+<a href="http://hyperspy.org/hyperspy-doc/dev/examples/index.html">Examples</a> ·
 <a href="news.html">News</a> · 
-<a href="trainings.html">Trainings</a> · 
+<a href="support.html">Support</a> · 
 <a href="http://hyperspy.org/hyperspy-doc/dev/citing.html">Citing</a>
+
         </div>
        </div>
     </div>
@@ -103,6 +105,7 @@
   <ul class="simple">
     <li><a href="faq.html">FAQ</a></li>
     <li><a href="developer.html">Info for developers</a></li>
+    <li><a href="trainings.html">Trainings</a></li>
   </ul>          
 </div>
         </div>
