Updated website (automated commit)

--- a/search.html
+++ b/search.html
@@ -82,6 +82,11 @@
 
 </div>
 
+<div class="tile"><h4>Beta</h4>
+    0.3.0 Beta 1 dev<br/>
+    <a href="file:///home/fjd29/Python/hyperspy-website/gh-pages/download.html#beta-releases">Download</a>
+</div>
+
 <div class="tile"><h4>Development</h4>
     0.3 dev<br/>
     <a href="https://github.com/hyperspy/hyperspy">Github</a>
