--- a/search.html
+++ b/search.html
@@ -83,8 +83,8 @@
 </div>
 
 <div class="tile"><h4>Beta</h4>
-    0.3.0 Beta 1 dev<br/>
-    <a href="file:///home/fjd29/Python/hyperspy-website/gh-pages/download.html#beta-releases">Download</a>
+    0.3.0beta1<br/>
+    <a href="http://hyperspy.org/download.html#beta-releases">Download</a>
 </div>
 
 <div class="tile"><h4>Development</h4>
