--- a/search.html
+++ b/search.html
@@ -160,7 +160,7 @@
       
     <div class="footer">
         &copy; Copyright The Hyperspy development team.
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1pre.
+      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.2.
     </div>
     </div>
 
