--- a/documentation.html
+++ b/documentation.html
@@ -26,7 +26,13 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="shortcut icon" href="_static/hyperspy_logo.ico"/>
+  
     <link rel="top" title="Hyperspy" href="index.html" />
+  <link rel="alternate"
+        type="application/rss+xml"
+        title="Hyperspy News"
+        href="/news.rss" />
+
  
 <script type="text/javascript">
 
