--- a/search.html
+++ b/search.html
@@ -27,7 +27,13 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="_static/searchtools.js"></script>
     <link rel="shortcut icon" href="_static/hyperspy_logo.ico"/>
+  
     <link rel="top" title="Hyperspy" href="index.html" />
+  <link rel="alternate"
+        type="application/rss+xml"
+        title="Hyperspy News"
+        href="/news.rss" />
+
   <script type="text/javascript">
     jQuery(function() { Search.loadIndex("searchindex.js"); });
   </script>
