Updated website (automated commit)

--- a/index.html
+++ b/index.html
@@ -130,10 +130,11 @@
 <p>Hyperspy is an open source library providing tools for interactive data
 analysis of multidimensional datasets. It is specially well-suited (but not
 limited) to spectroscopy data analysis.</p>
-<p>Main features:</p>
+<p>Main features:
+* Data structures to easily operate on multidimensional datasets with</p>
+<blockquote>
+<div>integrated indexing and iterators.</div></blockquote>
 <ul class="simple">
-<li>Data structures to easily operate on multidimensional datasets with
-integrated indexing and iterators.</li>
 <li>Visualization of n-dimensional spectra and images.</li>
 <li>Curve fitting.</li>
 <li>Machine learning e.g. PCA, ICA...</li>
