Updated website (automated commit)

--- a/download.html
+++ b/download.html
@@ -191,6 +191,8 @@ with raw or bin extension it is opened directly without prompting</p>
     </div>
     </div>
 
+<a href="https://github.com/hyperspy/hyperspy"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+
     <div class="footer-wrapper">
       
     <div class="footer">
