--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@ please acknowledge this fact by citing the project. Please, read on
     </div>
     </div>
 
+<a href="https://github.com/hyperspy/hyperspy"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+
     <div class="footer-wrapper">
       
     <div class="footer">
