--- a/news.html
+++ b/news.html
@@ -181,6 +181,8 @@ available as part of the official program of SFMu 2013.</p>
     </div>
     </div>
 
+<a href="https://github.com/hyperspy/hyperspy"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+
     <div class="footer-wrapper">
       
     <div class="footer">
