Updated website (automated commit)

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ spectra a.k.a spectrum image).</p>
 operate on an individual signal to multidimensional arrays, as well as
 providing easy access to analytical tools that exploit the multidimensionality
 of the dataset.</p>
-<p>Its modular structure makes it easy to add features to analyze different kind
+<p>Its modular structure makes it easy to add features to analyze different kinds
 of signals. Currently there are specialized tools to analyze electron
 energy-loss spectroscopy (EELS) and energy dispersive X-rays (EDX) data.</p>
 <div class="section" id="highlights">
