Updated website (automated commit)

--- a/uninstall_issue.html
+++ b/uninstall_issue.html
@@ -178,7 +178,8 @@ can contain other files that you do not want to delete. In the worst scenarios
 this folder can be your &#8220;My Documents&#8221;, &#8220;Program Files&#8221; or even your drive
 &#8220;C:/&#8221; folder (!). If that is your case <em>do not use the uninstaller</em> to
 uninstall HyperSpy and follow the following instructions instead to uninstall
-it.</p>
+it. Failing to do this will cause the uninstaller to delete <em>all the files</em> in
+the installation folder, not only the HyperSpy related ones.</p>
 </div>
 </div>
 <div class="section" id="uninstalling-hyperspy-0-6-if-your-installation-is-affected">
