Updated website (automated commit)

--- a/uninstall_issue.html
+++ b/uninstall_issue.html
@@ -165,7 +165,7 @@ follows:</p>
 <li><p class="first">Left-click in &#8220;Open file location&#8221;.</p>
 </li>
 </ol>
-<p>Following the above instruction the windows file manager should appear showing
+<p>Following the above instruction the file manager should appear showing
 the HyperSpy installation folder as in the following image.</p>
 <blockquote>
 <div><div class="figure align-center">
