--- a/uninstall_issue.html
+++ b/uninstall_issue.html
@@ -130,7 +130,7 @@ not require the installation of any other library, has <a class="reference exter
 deletion of files unrelated to HyperSpy</strong> in customized installations. If you
 have installed HyperSpy 0.6 using the <em>full installers</em> please read further
 before uninstalling HyperSpy 0.6.</p>
-<p>We are currently working on this issue and we will release a fix a soon as
+<p>We are currently working on this issue and we will release a fix as soon as
 possible. Until we release a fix we strongly reccommend that you do not
 uninstall HyperSpy. Using HyperSpy is safe, only uninstalling it can trigger
 this problem in some rare circumstances.</p>
