Updated website (automated commit)

--- a/uninstall_issue.html
+++ b/uninstall_issue.html
@@ -131,7 +131,7 @@ deletion of files unrelated to HyperSpy</strong> in customized installations. If
 have installed HyperSpy 0.6 using the <em>full installers</em> please read further
 before uninstalling HyperSpy 0.6.</p>
 <p>We are currently working on this issue and we will release a fix as soon as
-possible. Until we release a fix we strongly reccommend that you do not
+possible. Until we release a fix we strongly reccommend not
 uninstall HyperSpy. Using HyperSpy is safe, only uninstalling it can trigger
 this problem in some rare circumstances.</p>
 <p>If you want to uninstall HyperSpy 0.6 before we release a fix for this issue
