--- a/support.html
+++ b/support.html
@@ -59,7 +59,7 @@
           <a href="index.html">Home</a> · 
 <a href="download.html">Download</a> · 
 <a href="http://hyperspy.org/hyperspy-doc/current/index.html">Documentation</a> · 
-<a href="http://hyperspy.org/hyperspy-doc/dev/examples/index.html">Examples</a> ·
+<a href="http://nbviewer.ipython.org/github/hyperspy/hyperspy-demos/tree/master/">Demos</a> ·
 <a href="news.html">News</a> · 
 <a href="#">Support</a> · 
 <a href="http://hyperspy.org/hyperspy-doc/dev/citing.html">Citing</a>
