Updated website (automated commit)

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <a href="http://nbviewer.ipython.org/github/hyperspy/hyperspy-demos/tree/master/">Demos</a> ·
 <a href="news.html">News</a> · 
 <a href="support.html">Support</a> · 
-<a href="http://hyperspy.readthedocs.org/en/latest/citing.html">Citing</a>
+<a href="http://hyperspy.org/hyperspy-doc/dev/citing.html">Citing</a>
         </div>
        </div>
     </div>
