--- a/support.html
+++ b/support.html
@@ -62,7 +62,7 @@
 <a href="http://nbviewer.ipython.org/github/hyperspy/hyperspy-demos/tree/master/">Demos</a> ·
 <a href="news.html">News</a> · 
 <a href="#">Support</a> · 
-<a href="http://hyperspy.readthedocs.org/en/latest/citing.html">Citing</a>
+<a href="http://hyperspy.org/hyperspy-doc/dev/citing.html">Citing</a>
         </div>
        </div>
     </div>
