Updated website (automated commit)

--- a/search.html
+++ b/search.html
@@ -66,7 +66,7 @@
         <div class="rel">
           <a href="index.html">Home</a> · 
 <a href="download.html">Download</a> · 
-<a href="http://hyperspy.readthedocs.org/en/stable/">Documentation</a> · 
+<a href="http://hyperspy.org/hyperspy-doc/current/index.html">Documentation</a> · 
 <a href="http://nbviewer.ipython.org/github/hyperspy/hyperspy-demos/tree/master/">Demos</a> ·
 <a href="news.html">News</a> · 
 <a href="support.html">Support</a> · 
