--- a/search.html
+++ b/search.html
@@ -73,7 +73,7 @@
         <div class="rel">
           <a href="index.html">Home</a> ·
 <a href="download.html">Download</a> ·
-<a href="http://hyperspy.org/hyperspy-doc/current/index.html">Documentation</a> ·
+<a href="documentation.html">Documentation</a> ·
 <a href="http://nbviewer.ipython.org/github/hyperspy/hyperspy-demos/tree/master/">Demos</a> ·
 <a href="news.html">News</a> ·
 <a href="support.html">Support</a> ·
@@ -93,14 +93,13 @@
 <h3>Versions</h3>
 
 <div class="tile"><h4>Stable</h4>
-    0.8.5<br/>
+    1.0<br/>
     <a href="http://hyperspy.org/download.html#beta-releases">Download</a><br/>
     <a href="https://github.com/hyperspy/hyperspy/issues?utf8=%E2%9C%93&q=milestone%3ARELEASE_next_patch+">Known issues</a>
 
 </div>
 
 <div class="tile"><h4>Development</h4>
-    0.9.dev<br/>
     <a href="https://github.com/hyperspy/hyperspy">Github</a>
 </div>
 </div>
