--- a/documentation.html
+++ b/documentation.html
@@ -34,6 +34,7 @@
         href="/news.rss" />
 
  
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
