--- a/search.html
+++ b/search.html
@@ -41,6 +41,7 @@
   <script type="text/javascript" id="searchindexloader"></script>
   
  
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
