--- a/search.html
+++ b/search.html
@@ -95,9 +95,9 @@
 <h3>Versions</h3>
 
 <div class="tile"><h4>Stable</h4>
-    1.2<br/>
+    1.3<br/>
     <a href="http://hyperspy.org/download.html#beta-releases">Download</a><br/>
-    <a href="https://github.com/hyperspy/hyperspy/issues?utf8=%E2%9C%93&q=label%3ARELEASE_next_patch+">Known issues</a>
+    <a href="https://github.com/hyperspy/hyperspy/issues?utf8=%E2%9C%93&q=label%3A%22release%3A%20next%20patch%22%20">Known issues</a>
 
 </div>
 
@@ -162,7 +162,7 @@
       
     <div class="footer" role="contentinfo">
         &#169; Copyright The HyperSpy development team.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.5.1.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.5.6.
     </div>
     </div>
 
