--- a/support.html
+++ b/support.html
@@ -54,7 +54,8 @@
        
         <div class="rel">
           <a href="index.html">Home</a> ·
-<a href="download.html">Download</a> ·
+<a target="_blank"
+   href="http://hyperspy.org/hyperspy-doc/current/user_guide/install.html">Download</a> ·
 <a href="documentation.html">Documentation</a> ·
 <a target="_blank" href="https://github.com/hyperspy/hyperspy-demos">Demos</a> ·
 <a href="news.html">News</a> ·
@@ -75,8 +76,7 @@
 <h3>Versions</h3>
 
 <div class="tile"><h4>Stable</h4>
-    1.3<br/>
-    <a href="download.html">Download</a><br/>
+    1.3.1<br/>
     <a target="_blank" href="http://hyperspy.org/hyperspy-doc/current/index.html">
         Documentation</a><br/>
     <a target="_blank" href="https://github.com/hyperspy/hyperspy-demos/">
