--- a/documentation.html
+++ b/documentation.html
@@ -75,7 +75,7 @@
 <h3>Versions</h3>
 
 <div class="tile"><h4>Stable</h4>
-    1.4.2<br/>
+    1.5<br/>
     <a target="_blank" href="http://hyperspy.org/hyperspy-doc/current/index.html">
         Documentation</a><br/>
     <a target="_blank" href="https://github.com/hyperspy/hyperspy-demos/">
@@ -125,6 +125,7 @@
 </li>
 <li><dl class="simple">
 <dt>Older versions:</dt><dd><ul>
+<li><p><a href="http://hyperspy.org/hyperspy-doc/v1.4/index.html" target="_blank">v1.4</a></p></li>
 <li><p><a href="http://hyperspy.org/hyperspy-doc/v1.3/index.html" target="_blank">v1.3</a></p></li>
 <li><p><a href="http://hyperspy.org/hyperspy-doc/v1.2/index.html" target="_blank">v1.2</a></p></li>
 <li><p><a href="http://hyperspy.org/hyperspy-doc/v1.1/index.html" target="_blank">v1.1</a></p></li>
@@ -172,7 +173,7 @@ src="https://www.youtube.com/embed/kVlf3bMZcsc" frameborder="0" allowfullscreen>
       
     <div class="footer" role="contentinfo">
         &#169; Copyright The HyperSpy development team.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.1.0.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.1.2.
     </div>
     </div>
 
