--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HyperSpy: multi-dimensional data analysis toolbox &#8212; HyperSpy</title>
     <link rel="stylesheet" href="_static/agogo.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -75,7 +76,7 @@
 <h3>Versions</h3>
 
 <div class="tile"><h4>Stable</h4>
-    1.5.2<br/>
+    1.6.0<br/>
     <a target="_blank" href="http://hyperspy.org/hyperspy-doc/current/index.html">
         Documentation</a><br/>
     <a target="_blank" href="https://github.com/hyperspy/hyperspy-demos/">
@@ -163,6 +164,7 @@ electron microscopy community but it is proving useful in many other fields.</p>
 </div>
 
 
+            <div class="clearer"></div>
           </div>
         </div>
       </div>
@@ -177,7 +179,7 @@ electron microscopy community but it is proving useful in many other fields.</p>
       
     <div class="footer" role="contentinfo">
         &#169; Copyright The HyperSpy development team.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.4.0.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.1.2.
     </div>
     </div>
 
