--- a/search.html
+++ b/search.html
@@ -2,9 +2,10 @@
 
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search &#8212; HyperSpy</title>
     <link rel="stylesheet" href="_static/agogo.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -80,7 +81,7 @@
 <h3>Versions</h3>
 
 <div class="tile"><h4>Stable</h4>
-    1.5.2<br/>
+    1.6.0<br/>
     <a target="_blank" href="http://hyperspy.org/hyperspy-doc/current/index.html">
         Documentation</a><br/>
     <a target="_blank" href="https://github.com/hyperspy/hyperspy-demos/">
@@ -125,10 +126,8 @@
   </p>
   </div>
   <p>
-    From here you can search these documents. Enter your search
-    words into the box below and click "search". Note that the search
-    function will automatically search for all of the words. Pages
-    containing fewer words won't appear in the result list.
+    Searching for multiple words only shows matches that contain
+    all words.
   </p>
   <form action="" method="get">
     <input type="text" name="q" aria-labelledby="search-documentation" value="" />
@@ -140,6 +139,7 @@
   
   </div>
 
+            <div class="clearer"></div>
           </div>
         </div>
       </div>
@@ -154,7 +154,7 @@
       
     <div class="footer" role="contentinfo">
         &#169; Copyright The HyperSpy development team.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.4.0.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.1.2.
     </div>
     </div>
 
