deploy: hyperspy/hyperspy-website@fa2bb765161b31e14f0634bfc6db65b159b25750

--- a/search.html
+++ b/search.html
@@ -97,7 +97,7 @@
   <aside id="bd-header-version-warning" class="d-none d-print-none" aria-label="Version warning"></aside>
 </div>
 <aside class="bd-header-announcement" aria-label="Announcement">
-  <div class="bd-header-announcement__content"><font size='+1'><b><a href='https://hyperspy.org/hyperspy-doc/v2.0/changes.html'>HyperSpy 2.0 released!</a></b></font></div>
+  <div class="bd-header-announcement__content"><font size='+1'><b><a href='https://hyperspy.org/news/Award2025.html'>HyperSpy receives Award for Open Source Research Software!</a></b></font></div>
 </aside>
 
   
